Fixed aspect cropping.

--- a/ReactCrop.css
+++ b/ReactCrop.css
@@ -2,6 +2,7 @@
 	position: relative;
 	display: inline-block;
 	cursor: crosshair;
+	overflow: hidden;
 }
 
 .ReactCrop--image {
@@ -19,7 +20,7 @@
 	right: 0;
 	bottom: 0;
 	left: 0;
-	background-color: rgba(0,0,0,0.4);
+	background-color: rgba(0,0,0,0.6);
 }
 
 .ReactCrop--crop-selection {
@@ -59,8 +60,8 @@
 
 .ReactCrop--drag-handle {
 	position: absolute;
-	width: 7px;
-	height: 7px;
+	width: 6px;
+	height: 6px;
 	background-color: rgba(0,0,0,0.2);
 	border: 1px solid #eee;
 }
@@ -129,13 +130,13 @@
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 7px;
+	height: 6px;
 	margin-top: -4px;
 }
 .ReactCrop--drag-bar.ord-e {
 	right: 0;
 	top: 0;
-	width: 7px;
+	width: 6px;
 	height: 100%;
 	margin-right: -4px;
 }
@@ -143,18 +144,28 @@
 	bottom: 0;
 	left: 0;
 	width: 100%;
-	height: 7px;
+	height: 6px;
 	margin-bottom: -4px;
 }
 .ReactCrop--drag-bar.ord-w {
 	top: 0;
 	left: 0;
-	width: 7px;
+	width: 6px;
 	height: 100%;
 	margin-left: -4px;
 }
 
 .ReactCrop-new-crop .ReactCrop--drag-bar,
 .ReactCrop-new-crop .ReactCrop--drag-handle {
+	display: none;
+}
+
+.ReactCrop-fixed-aspect .ReactCrop--drag-handle.ord-n,
+.ReactCrop-fixed-aspect .ReactCrop--drag-handle.ord-e,
+.ReactCrop-fixed-aspect .ReactCrop--drag-handle.ord-s,
+.ReactCrop-fixed-aspect .ReactCrop--drag-handle.ord-w {
+	display: none;
+}
+.ReactCrop-fixed-aspect .ReactCrop--drag-bar {
 	display: none;
 }
